--- a/Tritium/Assembly-CSharp.csproj
+++ b/Tritium/Assembly-CSharp.csproj
@@ -68,19 +68,25 @@
     <Compile Include="Assets\Scripts\BackgroundLayerController.cs" />
     <Compile Include="Assets\Scripts\Bounce.cs" />
     <Compile Include="Assets\Scripts\ColorEffect.cs" />
+    <Compile Include="Assets\Scripts\CompanyController.cs" />
     <Compile Include="Assets\Scripts\Core\Constants\Consts.cs" />
     <Compile Include="Assets\Scripts\Core\KeyStateController.cs" />
+    <Compile Include="Assets\Scripts\Core\Messenging\GameEvent.cs" />
+    <Compile Include="Assets\Scripts\Core\Messenging\Messenger.cs" />
     <Compile Include="Assets\Scripts\Core\RandomHelper.cs" />
     <Compile Include="Assets\Scripts\Core\RaycastHelper.cs" />
     <Compile Include="Assets\Scripts\Core\Timer.cs" />
     <Compile Include="Assets\Scripts\Core\VectorHelper.cs" />
     <Compile Include="Assets\Scripts\DamageDealer.cs" />
+    <Compile Include="Assets\Scripts\EffectsController.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
     <Compile Include="Assets\Scripts\HealthController.cs" />
-    <Compile Include="Assets\Scripts\Items\EnemySpawner.cs" />
+    <Compile Include="Assets\Scripts\Items\Entityes\StarshipContainer.cs" />
     <Compile Include="Assets\Scripts\Items\HealthBar.cs" />
     <Compile Include="Assets\Scripts\Items\KeepRotating.cs" />
+    <Compile Include="Assets\Scripts\Items\RandomEnemySpawner.cs" />
     <Compile Include="Assets\Scripts\Items\SlaveContainer.cs" />
+    <Compile Include="Assets\Scripts\Items\StarshipSpawnController.cs" />
     <Compile Include="Assets\Scripts\Menu\MenuController.cs" />
     <Compile Include="Assets\Scripts\MovingController.cs" />
     <Compile Include="Assets\Scripts\ScriptForTesting.cs" />
