--- a/Tritium/Assembly-CSharp.csproj
+++ b/Tritium/Assembly-CSharp.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Assets\Scripts\Controllers\HealthController.cs" />
     <Compile Include="Assets\Scripts\Controllers\KillCountController.cs" />
     <Compile Include="Assets\Scripts\Controllers\MovingController.cs" />
-    <Compile Include="Assets\Scripts\Controllers\RandomEnemySpawnController.cs" />
+    <Compile Include="Assets\Scripts\Controllers\RandomSpawnController.cs" />
     <Compile Include="Assets\Scripts\Controllers\ShootingController.cs" />
     <Compile Include="Assets\Scripts\Controllers\StarshipSpawnController.cs" />
     <Compile Include="Assets\Scripts\Controllers\UserController.cs" />
@@ -89,6 +89,7 @@
     <Compile Include="Assets\Scripts\Core\RaycastHelper.cs" />
     <Compile Include="Assets\Scripts\Core\Timer.cs" />
     <Compile Include="Assets\Scripts\Core\VectorHelper.cs" />
+    <Compile Include="Assets\Scripts\Interactive\HealthPack.cs" />
     <Compile Include="Assets\Scripts\Map\MapController.cs" />
     <Compile Include="Assets\Scripts\Map\MapPointFollower.cs" />
     <Compile Include="Assets\Scripts\Menu\GameStatisticController.cs" />
